--- a/src/day6/resources/index.html
+++ b/src/day6/resources/index.html
@@ -7,9 +7,10 @@
 <body>
     <div>
         <form action="/someUrl" method="GET">
-            <p>Text Box: <br> <input type="text"/></p>
-            <p>Password Input: <br> <input type="password"/></p>
-            <p>Text Area: <br> <textarea></textarea></p>
+            <p>Text Box: <br> <input type="text" name="text"/></p>
+            <p> <label>User Name</label> <input type="text" name="user_name" placeholder="User Name"/></p>
+            <p>Password Input: <br> <input type="password" name="user_password"/></p>
+            <p>Text Area: <br> <textarea type="text" name="user_text_area"></textarea></p>
             <p>
                 Dropdown <br>
                 <select>
